	
Wed Jun 30 16:56:32 CEST 2004

	- Added SET DESCRIPTOR command. 
	- Cleaned up error handling in preprocessor.
	
Sun Jul  4 16:53:53 CEST 2004

	- Made sure SET DESCRIPTOR accepts all data types including constants.
	- Some code cleanup.
	
Mon,  5 Jul 2004 10:41:54 +0200

	- Fixed indicator in SET DESCRIPTOR.
	- Added special handling of descriptor header information.
	- More code cleanup.
	
Mon Jul  5 20:50:09 CEST 2004

	- Added free() calls against memory leak in interval.c.
	
Tue Jul 20 09:15:21 CEST 2004

	- Synced parser and keyword list.
	- Fixed handling of cyclic defines.
	
Mon Jul 26 09:04:53 CEST 2004

	- SQL defines are only used in SQL space in Informix mode.
	
Mon Sep  6 13:17:46 CEST 2004

	- Fixed bug in Informix mode that caused a segfault.
	- Set pgtypes library version to 1.2.
	
Mon Sep 27 11:05:49 CEST 2004

	- Synced parser.
	- Removed Oracle transaction syntax to fix shift/reduce error.
	
Tue Oct  5 12:45:48 CEST 2004

	- '::' is no longer interpreted as a variable in a prepare statement.
	  Added patch by Daniel Verite to fix this.
	  
Mon Oct 18 15:34:51 CEST 2004

	- Synced parser.
	
Wed Nov 10 14:43:50 CET 2004

	- List VALUE as a keyword.
	
Mon Dec  6 21:27:34 CET 2004
	
	- Fixed bug in parsing of typedef'ed array sizes.
	- Synced parser.
	
Thu Dec 23 09:26:08 CET 2004

	- Added PGTYPEStimestamp_add_interval written by Dave Cramer.
	- Fixed parsing of defines to make sure they used more than once.	
	
Mon Jan 10 13:55:32 CET 2005
	
	- Fixed segfault in adjust_informix due to missing varchar type.
	- Set ecpg version to 3.2.0.
	- Set compat library version to 1.2.
	- Set ecpg library version to 4.2.

Tue Jan 25 13:47:45 CET 2005

	- Fixed segfault in preprocessor due to free a struct twice.

Wed Feb  2 16:35:27 CET 2005

	- Fixed bug in parsing of #line statement in declare section.
	
Wed Feb  9 12:24:03 CET 2005

	- Fixed bug in parsing of CREATE AS statement.
	- Set ecpg version to 3.2.1.
