@@ -1906,5 +1906,10 @@ Wed Feb  2 16:35:27 CET 2005
 Wed Feb  9 12:24:03 CET 2005
 
 	- Fixed bug in parsing of CREATE AS statement.
+
+Thu Feb 10 09:03:56 CET 2005
+
+	- Fixed more parsing bugs in other CREATE statements. Thanks to TANIDA
+ 	  Yutaka <tanida@sra.co.jp> for pointing out all these problems.
 	- Set ecpg version to 3.2.1.
 
